# quietnotes

./: .gitignore  LICENSE  README.md
apps/audio-capture/: Package.swift
apps/audio-capture/Sources/AudioCapture/: AudioCaptureCommand.swift  CaptureSession.swift  StereoWriter.swift
apps/plugin/: esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
apps/plugin/src/: errors.ts  main.ts  settings.ts  sidecar-client.ts  state.ts
apps/sidecar/: audio.py  dev.config.example.json  output.py  pyproject.toml  sidecar.py  summarize.py  transcribe.py
apps/sidecar/tests/: test_daemon.py  test_output.py  test_summarize.py
docs/: design-idea.md
docs/plans/: 2026-05-25-obsidian-plugin-design.md  2026-05-25-obsidian-plugin-impl.md
