[project]
name = "quietnotes-sidecar"
version = "0.1.0"
description = "Local-only meeting notetaker pipeline: record → transcribe → summarize → write markdown."
requires-python = ">=3.10"
dependencies = [
    "mlx-whisper>=0.4.3",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
quietnotes-sidecar = "sidecar:main"

[tool.uv]
package = false
